--- a/src/nedc/Makefile.in
+++ b/src/nedc/Makefile.in
@@ -9,6 +9,8 @@ LEX=@LEX@
 CFLAGS=@CFLAGS@
 LDFLAGS=@LDFLAGS@
 
+OMNETPP_BIN_DIR=@OMNETPP_BIN_DIR@
+
 #
 # Local definitions
 #
@@ -58,6 +60,9 @@ depend:
 
 clean:
 	rm -f *.o lex.yy.c ebnf.tab.c ebnf.tab.h nedc *_n.cc
+
+install-local: nedc
+	cp nedc $(OMNETPP_BIN_DIR)
 
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
