--- a/src/cmdenv/Makefile.in
+++ b/src/cmdenv/Makefile.in
@@ -9,6 +9,8 @@ RANLIB=@RANLIB@
 CFLAGS=@CFLAGS@
 
 OMNETPP_INCL_DIR=@OMNETPP_INCL_DIR@
+OMNETPP_LIB_DIR=@OMNETPP_LIB_DIR@
+OMNETPP_VERSION=@OMNETPP_VERSION@
 
 # LIB_SUFFIX is either A_LIB_SUFFIX or SO_LIB_SUFFIX
 LIB_SUFFIX=@LIB_SUFFIX@
@@ -50,6 +52,12 @@ depend:
 
 clean:
 	rm -f *.o libcmdenv$(A_LIB_SUFFIX) libcmdenv$(SO_LIB_SUFFIX)
+
+install-local: libcmdenv$(LIB_SUFFIX)
+	rm -f $(OMNETPP_LIB_DIR)/libcmdenv$(A_LIB_SUFFIX)*
+	rm -f $(OMNETPP_LIB_DIR)/libcmdenv$(SO_LIB_SUFFIX)*
+	cp libcmdenv$(LIB_SUFFIX) $(OMNETPP_LIB_DIR)/libcmdenv$(LIB_SUFFIX).$(OMNETPP_VERSION)
+	(cd $(OMNETPP_LIB_DIR); ln -s libcmdenv$(LIB_SUFFIX).$(OMNETPP_VERSION) libcmdenv$(LIB_SUFFIX))
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
