--- a/src/gned/Makefile.in
+++ b/src/gned/Makefile.in
@@ -10,6 +10,7 @@ CFLAGS=@CFLAGS@
 LDFLAGS=@LDFLAGS@
 
 OMNETPP_BITMAP_PATH=@OMNETPP_BITMAP_PATH@
+OMNETPP_BIN_DIR=@OMNETPP_BIN_DIR@
 
 TK_CFLAGS=@TK_CFLAGS@
 TK_LIBS=@TK_LIBS@
@@ -76,6 +77,9 @@ depend:
 
 clean:
 	rm -f *.o lex.yy.c ebnf.tab.c ebnf.tab.h gned
+
+install-local: gned
+	cp gned $(OMNETPP_BIN_DIR)
 
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
