--- a/src/utils/Makefile.in
+++ b/src/utils/Makefile.in
@@ -9,6 +9,8 @@ LDFLAGS=@LDFLAGS@
 
 COPTS=$(CFLAGS)
 
+OMNETPP_BIN_DIR=@OMNETPP_BIN_DIR@
+
 seedtool : seedtool.o
 	$(CC) $(LDFLAGS) seedtool.o -o seedtool
 
@@ -21,5 +23,8 @@ depend:
 
 clean:
 	rm -f *.o seedtool
+
+install-local: seedtool
+	cp seedtool $(OMNETPP_BIN_DIR)
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
