--- a/configure.in
+++ b/configure.in
@@ -2,6 +2,56 @@ dnl Process this file with autoconf to produce a configure script.
 
 AC_INIT(src/sim/omnetpp.h)
 
+#
+# OMNeT++ version number
+#
+OMNETPP_VERSION="1.2"
+
+#
+# Location of various components, by default relative to the toplevel omnetpp directory.
+# You normally don't need to change anything here.
+#
+OMNETPP_ROOT=`pwd`
+if test -n "$HOME"; then
+    if pwd | grep "^$HOME" >/dev/null; then
+        OMNETPP_ROOT=`pwd|sed "s|^$HOME|\\\${HOME}|"`
+    fi
+fi
+
+OMNETPP_SRC_DIR="$OMNETPP_ROOT/src"
+OMNETPP_SAMPLES_DIR="$OMNETPP_ROOT/samples"
+OMNETPP_MODELS_DIR="$OMNETPP_ROOT/models"
+OMNETPP_BITMAP_PATH="$OMNETPP_ROOT/bitmaps"
+
+OMNETPP_BIN_DIR="$OMNETPP_ROOT/bin"
+OMNETPP_INCL_DIR="$OMNETPP_SRC_DIR/sim"
+OMNETPP_LIB_DIR="$OMNETPP_ROOT/lib"
+
+#
+# Select here if you want to build static or shared libraries
+#
+build_shared_libs=yes
+#build_shared_libs=no
+
+#
+# Here you may help configure to determine which compile switches (e.g. -Ixxx)
+# and which linker switches (e.g. -Lxxx -ltk80 -ltcl80 -lX11) are needed
+# to build an app with PVM, Tcl/Tk or Turbo Vision
+#
+PVM_CFLAGS=
+PVM_LIBS=
+
+TK_CFLAGS=
+TK_LIBS=
+
+TV_CFLAGS=
+TV_LIBS=
+
+#----------------------------------------------------------------
+# You should not need to modify below this line.
+#----------------------------------------------------------------
+
+
 dnl -------------------------------------------------------------
 dnl  Test macro to find a lib in one of the passed directories
 dnl -------------------------------------------------------------
@@ -33,12 +83,6 @@ else
   :; $5
 fi
 ])
-
-#----------------------
-# Version info.
-#----------------------
-
-OMNETPP_VERSION="1.2"
 
 #----------------------
 # Checks for programs.
@@ -89,60 +133,71 @@ AC_CHECK_LIB(stdc++, main,
 # Check for PVM.
 #----------------------
 
-# FIXME:
-PVM_CFLAGS="-I$PVM_ROOT/include"
+if test ! -n "$PVM_CFLAGS"; then
+    # FIXME:
+    PVM_CFLAGS="-I$PVM_ROOT/include"
+fi
 
-# test for -lpvm3 and -lgpvm3 at the same time
-OPP_CHECK_LIB_WITHPATH(pvm3, pvm_joingroup, $PVM_ROOT/lib/$PVM_ARCH,
-  PVM_LIBS="$lib_path_swith -lgpvm3 -lpvm3",
-  [PVM_LIBS=""
-   AC_MSG_WARN(if you do have PVM3 then set PVM_ROOT and PVM_ARCH..)
-   AC_MSG_WARN(..to their correct values and re-run configure)],
-  -lpvm3
-  )
+if test ! -n "$PVM_LIBS"; then
+    # test for -lpvm3 and -lgpvm3 at the same time
+    OPP_CHECK_LIB_WITHPATH(pvm3, pvm_joingroup, $PVM_ROOT/lib/$PVM_ARCH,
+      PVM_LIBS="$lib_path_swith -lgpvm3 -lpvm3",
+      [PVM_LIBS=""
+       AC_MSG_WARN(if you do have PVM3 then set PVM_ROOT and PVM_ARCH..)
+       AC_MSG_WARN(..to their correct values and re-run configure)],
+       -lpvm3
+    )
+fi
 
 #----------------------
 # Check for Tk.
 #----------------------
 
-# FIXME: non-gcc compilers probably need different flag
-TK_CFLAGS="-fwritable-strings"
-TK_LIBS=""
-
-# X Window
-AC_PATH_X
-if test "$no_x" != "yes"; then
-  if test -n "$x_includes"; then
-    TK_CFLAGS="-I$x_includes $TK_CFLAGS"
-  fi
-  if test -n "$x_libraries"; then
-    TK_LIBS="-L$x_libraries -lX11 $TK_LIBS"
-  fi
+if test ! -n "$TK_CFLAGS"; then
+   # FIXME: non-gcc compilers probably need different flag
+   TK_CFLAGS="-fwritable-strings"
 fi
 
-# Tcl
-OPP_CHECK_LIB_WITHPATH(tcl, Tcl_Init, /opt/lib,
-   TK_LIBS="$lib_path_switch -ltcl $TK_LIBS",
-   :,
-   $SYS_LIBS)
+if test ! -n "$TK_LIBS"; then
+    # X Window
+    AC_PATH_X
+    if test "$no_x" != "yes"; then
+      if test -n "$x_includes"; then
+        TK_CFLAGS="-I$x_includes $TK_CFLAGS"
+      fi
+      if test -n "$x_libraries"; then
+        TK_LIBS="-L$x_libraries -lX11 $TK_LIBS"
+      fi
+    fi
 
-# Tk
-OPP_CHECK_LIB_WITHPATH(tk, Tk_BindEvent, /opt/lib,
-   TK_LIBS="$lib_path_switch -ltk $TK_LIBS",
-   TK_LIBS=""; AC_MSG_WARN(Cannot link with Tcl/Tk -- Tkenv GNED and Plove will not build/run),
-   $TK_LIBS $SYS_LIBS)
+    # Tcl
+    OPP_CHECK_LIB_WITHPATH(tcl, Tcl_Init, /opt/lib,
+      TK_LIBS="$lib_path_switch -ltcl $TK_LIBS",
+      :,
+      $SYS_LIBS)
+
+    # Tk
+    OPP_CHECK_LIB_WITHPATH(tk, Tk_BindEvent, /opt/lib,
+      TK_LIBS="$lib_path_switch -ltk $TK_LIBS",
+      TK_LIBS=""; AC_MSG_WARN(Cannot link with Tcl/Tk -- Tkenv GNED and Plove will not build/run),
+      $TK_LIBS $SYS_LIBS)
+fi
 
 #----------------------
 # Check for Turbo Vision.
 #----------------------
 
-# FIXME:
-TV_CFLAGS="-I/usr/include/tvision"
+if test ! -n "$TV_LIBS"; then
+    # FIXME:
+    TV_CFLAGS="-I/usr/include/tvision"
+fi
 
-OPP_CHECK_LIB_WITHPATH(tv, main, /opt/lib,
-   TV_LIBS="$lib_path_swith -ltv",
-   TV_LIBS=""; AC_MSG_WARN(Cannot link with Turbo Vision -- TVenv will not build),
-   $SYS_LIBS)
+if test ! -n "$TV_LIBS"; then
+    OPP_CHECK_LIB_WITHPATH(tv, main, /opt/lib,
+      TV_LIBS="$lib_path_swith -ltv",
+      TV_LIBS=""; AC_MSG_WARN(Cannot link with Turbo Vision -- TVenv will not build),
+      $SYS_LIBS)
+fi
 
 #----------------------
 # Checks for header files.
@@ -169,37 +224,23 @@ AC_FUNC_VPRINTF
 AC_CHECK_FUNCS(select strdup strspn strstr)
 
 #----------------------
-# OMNETPP components.
-#----------------------
-
-OMNETPP_ROOT=`pwd`
-if test -n "$HOME"; then
-    if pwd | grep "^$HOME" >/dev/null; then
-        OMNETPP_ROOT=`pwd|sed "s|^$HOME|\\\${HOME}|"`
-    fi
-fi
-OMNETPP_SRC_DIR="$OMNETPP_ROOT/src"
-OMNETPP_SAMPLES_DIR="$OMNETPP_ROOT/samples"
-OMNETPP_MODELS_DIR="$OMNETPP_ROOT/models"
-OMNETPP_BITMAP_PATH="$OMNETPP_ROOT/bitmaps"
-
-OMNETPP_BIN_DIR="$OMNETPP_ROOT/bin"
-OMNETPP_INCL_DIR="$OMNETPP_SRC_DIR/sim"
-OMNETPP_LIB_DIR="$OMNETPP_ROOT/lib"
-
-# If you change this setting, remember to delete the other set of libraries
-# (or at least the soft links from lib/).
-LIB_SUFFIX='$(A_LIB_SUFFIX)'
-#LIB_SUFFIX='$(SO_LIB_SUFFIX)'
-
-
-#----------------------
 # Compile options. Use -g for debugging, -O3... for speed.
 #----------------------
 
 CFLAGS='-g'
 #CFLAGS='-g -Wall'
 #CFLAGS='-O3 -DNDEBUG=1'
+
+#----------------------
+# shared or static libraries
+#----------------------
+# If you change this setting, remember to delete the other set of libraries
+# (or at least the soft links from lib/).
+if test "$build_shared_libs" = yes; then
+    LIB_SUFFIX='$(SO_LIB_SUFFIX)'
+else
+    LIB_SUFFIX='$(A_LIB_SUFFIX)'
+fi
 
 #----------------------
 # Conditional build of some components
@@ -229,6 +270,17 @@ fi
 # Subtitutions.
 #----------------------
 
+AC_SUBST(OMNETPP_VERSION)
+
+AC_SUBST(OMNETPP_BIN_DIR)
+AC_SUBST(OMNETPP_INCL_DIR)
+AC_SUBST(OMNETPP_LIB_DIR)
+AC_SUBST(OMNETPP_BITMAP_PATH)
+
+AC_SUBST(OMNETPP_SRC_DIR)
+AC_SUBST(OMNETPP_SAMPLES_DIR)
+AC_SUBST(OMNETPP_MODELS_DIR)
+
 AC_SUBST(YACC)
 AC_SUBST(LEX)
 AC_SUBST(CC)
@@ -251,17 +303,6 @@ AC_SUBST(TK_LIBS)
 AC_SUBST(PVM_INCL_DIR)
 AC_SUBST(PVM_LIBS)
 AC_SUBST(SYS_LIBS)
-
-AC_SUBST(OMNETPP_VERSION)
-
-AC_SUBST(OMNETPP_BIN_DIR)
-AC_SUBST(OMNETPP_INCL_DIR)
-AC_SUBST(OMNETPP_LIB_DIR)
-AC_SUBST(OMNETPP_BITMAP_PATH)
-
-AC_SUBST(OMNETPP_SRC_DIR)
-AC_SUBST(OMNETPP_SAMPLES_DIR)
-AC_SUBST(OMNETPP_MODELS_DIR)
 
 AC_SUBST(TKENV_IF_POSSIBLE)
 AC_SUBST(TVENV_IF_POSSIBLE)
