--- a/src/tkenv/Makefile.in
+++ b/src/tkenv/Makefile.in
@@ -21,6 +21,9 @@ LIB_SUFFIX=@LIB_SUFFIX@
 A_LIB_SUFFIX=@A_LIB_SUFFIX@
 SO_LIB_SUFFIX=@SO_LIB_SUFFIX@
 
+# The following is either '-e' (embedded Tcl code) or '' (no embedding)
+TKENV_EMBED_TCL=@TKENV_EMBED_TCL@
+
 #
 # Local definitions
 #
@@ -28,14 +31,7 @@ COPTS=$(CFLAGS) -I$(OMNETPP_INCL_DIR) -I../envir $(TK_CFLAGS)
 
 OMNETPP_TKENV_DIR=`pwd`
 
-OBJS = $(TKAPP).o tkcmd.o tklib.o objinsp.o modinsp.o statinsp.o inspect.o arrow.o
-
-# Standalone executable support: you can have Tkenv's TCL script parts
-# be compiled into the executable. Enable doing so, uncomment the
-# TKAPP=tkapp-rt line below. Otherwise, uncomment TKAPP=tkapp.
-#
-TKAPP=tkapp
-#TKAPP=tkapp-rt
+OBJS = tkapp$(TKENV_EMBED_TCL).o tkcmd.o tklib.o objinsp.o modinsp.o statinsp.o inspect.o arrow.o
 
 #
 # Targets
@@ -54,8 +50,8 @@ libtkenv$(SO_LIB_SUFFIX) : $(OBJS)
 tkapp.o : tkapp.cc
 	$(CXX) -c $(COPTS) -DOMNETPP_TKENV_DIR=\"$(OMNETPP_TKENV_DIR)\" -DOMNETPP_BITMAP_PATH=\"$(OMNETPP_BITMAP_PATH)\" tkapp.cc
 
-tkapp-rt.o : tkapp.cc  tclcode.cc
-	$(CXX) -c $(COPTS) -DOMNETPP_BITMAP_PATH=\"$(OMNETPP_BITMAP_PATH)\" tkapp.cc -o tkapp-rt.o
+tkapp-e.o : tkapp.cc  tclcode.cc
+	$(CXX) -c $(COPTS) -DOMNETPP_BITMAP_PATH=\"$(OMNETPP_BITMAP_PATH)\" tkapp.cc -o tkapp-e.o
 
 tkcmd.o : tkcmd.cc
 	$(CXX) -c $(COPTS) tkcmd.cc
@@ -78,11 +74,8 @@ inspect.o: inspect.cc
 arrow.o: arrow.cc arrow.h
 	$(CXX) -c $(COPTS) arrow.cc
 
-tclcode.cc: *.tcl tcl2c
-	./tcl2c tclcode.cc *.tcl
-
-tcl2c: tcl2c.c
-	$(CC) tcl2c.c -o tcl2c
+tclcode.cc: *.tcl
+	../utils/tcl2c tclcode.cc *.tcl
 
 missing-library:
 	@ echo '  *** No Tk installation found -- skipping Tkenv'
