cygwin bash doesn't like 'source' command, corrected to '.'

--- a/configure.in
+++ b/configure.in
@@ -46,7 +46,7 @@ CFLAGS='-g'
 #----------------------
 # Read in user settings
 #----------------------
-source configure.user
+. configure.user
 
 
 dnl -------------------------------------------------------------
@@ -140,8 +140,8 @@ if test ! -n "$PVM_LIBS"; then
     OPP_CHECK_LIB_WITHPATH(pvm3, pvm_joingroup, $PVM_ROOT/lib/$PVM_ARCH,
       PVM_LIBS="$lib_path_swith -lgpvm3 -lpvm3",
       [PVM_LIBS=""
-       AC_MSG_WARN(if you do have PVM3 then set PVM_ROOT and PVM_ARCH..)
-       AC_MSG_WARN(..to their correct values and re-run configure)],
+       AC_MSG_WARN(if you do have PVM3 then set PVM_ROOT and PVM_ARCH...)
+       AC_MSG_WARN(...to their correct values and re-run configure)],
        -lpvm3
     )
 fi
@@ -192,7 +192,7 @@ fi
 if test ! -n "$TV_LIBS"; then
     OPP_CHECK_LIB_WITHPATH(tv, main, /opt/lib,
       TV_LIBS="$lib_path_swith -ltv",
-      TV_LIBS=""; AC_MSG_WARN(Cannot link with Turbo Vision -- TVenv will not build),
+      TV_LIBS=""; AC_MSG_WARN(Cannot link with Turbo Vision -- Tvenv will not build),
       $SYS_LIBS)
 fi
 
