--- a/src/tkenv/Makefile.in
+++ b/src/tkenv/Makefile.in
@@ -29,7 +29,7 @@ TKENV_EMBED_SUFFIX=@TKENV_EMBED_SUFFIX@
 #
 COPTS=$(CFLAGS) -I$(OMNETPP_INCL_DIR) -I../envir $(TK_CFLAGS)
 
-OMNETPP_TKENV_DIR=`pwd`
+OMNETPP_TKENV_DIR=`@PWD@`
 
 OBJS = tkapp$(TKENV_EMBED_SUFFIX).o tkcmd.o tklib.o objinsp.o modinsp.o statinsp.o inspect.o arrow.o
 
