PWD/cygpwd added

--- a/configure.in
+++ b/configure.in
@@ -99,6 +99,11 @@ AS="as"
 AR="ar cr"
 SHLIB_LD="gcc -shared"
 NEDC=nedc
+if uname | grep "CYGWIN" >/dev/null; then
+    PWD="$OMNETPP_SRC_DIR/utils/cygpwd"
+else
+    PWD=pwd
+fi
 
 A_LIB_SUFFIX=".a"
 SO_LIB_SUFFIX=".so"
@@ -293,6 +298,7 @@ AC_SUBST(YACC)
 AC_SUBST(LEX)
 AC_SUBST(CC)
 AC_SUBST(CXX)
+AC_SUBST(PWD)
 AC_SUBST(NEDC)
 AC_SUBST(AS)
 AC_SUBST(AR)
