--- a/configure.in
+++ b/configure.in
@@ -23,7 +23,7 @@ fi
 OMNETPP_SRC_DIR="$OMNETPP_ROOT/src"
 OMNETPP_SAMPLES_DIR="$OMNETPP_ROOT/samples"
 OMNETPP_MODELS_DIR="$OMNETPP_ROOT/models"
-OMNETPP_BITMAP_PATH="$OMNETPP_ROOT/bitmaps"
+OMNETPP_BITMAP_PATH=".;./bitmaps;$OMNETPP_ROOT/bitmaps"
 
 OMNETPP_BIN_DIR="$OMNETPP_ROOT/bin"
 OMNETPP_INCL_DIR="$OMNETPP_SRC_DIR/sim"
